--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -4,46 +4,20 @@
   <head>    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img/fav/favicon.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <title>{% block title %}Заголовок страницы{% endblock %}</title>
+    <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>
+      {% block title %}{% endblock %}
+    </title>
   </head>
   <body>	   
-    <header>
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            Блогикум
-          </a>        
-          <ul class="nav  nav-pills">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">
-                Лента записей
-              </a>
-            </li>
-            <li class="nav-item">              
-              <a class="nav-link" href="about.html">
-                О проекте
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="rules.html">
-                Наши правила
-              </a>
-            </li>
-          </ul>      
-        </div>
-      </nav> 
-    </header>
+  {% include 'includes/header.html' %}
     <main>
-        {% block content %}{% endblock %}
+      {% block content %}{% endblock %}
     </main>
-    <footer class="border-top text-center py-3">
-      <p>© Блогикум</p>    
-    </footer>
+    {% include 'includes/footer.html' %}
   </body>
 </html>
