--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Лента записей{% endblock %}
+{% block title %}{{ category_slug }}{% endblock %}
 
 {% block content %}
   <div class="container py-5">
-    <h1>Публикации в категории - personal</h1>   
+    <h1>Публикации в категории - {{ category_slug }}</h1>   
   </div>
 {% endblock %}
